--- a/index.html
+++ b/index.html
@@ -86,15 +86,13 @@
                 <div>
                     <div class="uk-card uk-card-primary uk-card-hover uk-card-body">
                         <h3 class="uk-card-title">Salida Uno</h3>
-                        <p>El primer texto ordenado es el siguiente:</p>
-                        <p id="output-one"></p>
+                        <p class="uk-text-bold" id="output-one"></p>
                     </div>
                 </div>
                 <div>
                     <div class="uk-card uk-card-primary uk-card-hover uk-card-body uk-overflow-auto">
                         <h3 class="uk-card-title">Salida Dos</h3>
-                        <p>El segundo texto ordenado es el siguiente:</p>
-                        <p id="output-two"></p>
+                        <p class="uk-text-bold" id="output-two"></p>
                     </div>
                 </div>
             </div>
@@ -102,7 +100,7 @@
                 <div>
                     <div class="uk-card uk-card-secondary uk-card-hover uk-card-body">
                         <h3 class="uk-card-title">¿Son iguales los inputs?</h3>
-                        <p id="output-three"></p>
+                        <p class="uk-text-bold" id="output-three"></p>
                         <button class="uk-button uk-button-default uk-align-right" id="button-check">Ejecutar</button>
                     </div>
                 </div>
